feat update recipe pages and links

--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
   <body>
     <nav>
       <ul>
-        <li></li>
-        <li>a</li>
-        <li></li>
+        <li>
+          <a href="recipes/recipe1.html"
+            >Pasta with Garlic and Olive Oil (Aglio e Olio)</a
+          >
+        </li>
+        <li><a href="recipes/recipe2.html">Simple Mediterranean Salad</a></li>
+        <li>
+          <a href="recipes/recipe3.html">Simple Homemade Vegetable Soup</a>
+        </li>
       </ul>
     </nav>
   </body>
